--- a/package.json
+++ b/package.json
@@ -30,16 +30,16 @@
     }
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
-    "babel-jest": "^21.0.2",
-    "babel-preset-react-native": "^4.0.0",
-    "eslint": "^4.5.0",
-    "eslint-config-airbnb": "^15.1.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.2.1",
-    "jest": "^24.8.0",
-    "react": "^16.6.3",
+    "babel-eslint": "7.2.3",
+    "babel-jest": "21.0.2",
+    "babel-preset-react-native": "4.0.0",
+    "eslint": "4.5.0",
+    "eslint-config-airbnb": "15.1.0",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "6.0.2",
+    "eslint-plugin-react": "7.2.1",
+    "jest": "24.8.0",
+    "react": "16.6.3",
     "react-native": "0.57.3"
   },
   "scripts": {
